[gd_scene load_steps=22 format=3 uid="uid://dcbl4rcnn4pnr"]

[ext_resource type="Script" path="res://gameObjects/enemies/drone/drone.gd" id="1_4x7tn"]
[ext_resource type="Texture2D" uid="uid://ce61w072tsfma" path="res://art/Enemies/enemies x1.png" id="2_erb7q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kjdwk"]
height = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_cstgi"]
atlas = ExtResource("2_erb7q")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7p44"]
atlas = ExtResource("2_erb7q")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq758"]
atlas = ExtResource("2_erb7q")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo5r5"]
atlas = ExtResource("2_erb7q")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkvh6"]
atlas = ExtResource("2_erb7q")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v462o"]
atlas = ExtResource("2_erb7q")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l5fw"]
atlas = ExtResource("2_erb7q")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjief"]
atlas = ExtResource("2_erb7q")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5mds"]
atlas = ExtResource("2_erb7q")
region = Rect2(288, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_on16t"]
atlas = ExtResource("2_erb7q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a6mt"]
atlas = ExtResource("2_erb7q")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq1kd"]
atlas = ExtResource("2_erb7q")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0fvc"]
atlas = ExtResource("2_erb7q")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skmse"]
atlas = ExtResource("2_erb7q")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nk1m"]
atlas = ExtResource("2_erb7q")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lkyk"]
atlas = ExtResource("2_erb7q")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjmg1"]
atlas = ExtResource("2_erb7q")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gsll0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cstgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7p44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq758")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo5r5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkvh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v462o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l5fw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjief")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5mds")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_on16t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a6mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq1kd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0fvc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skmse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nk1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lkyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjmg1")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[node name="drone" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 35
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_4x7tn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_kjdwk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gsll0")
animation = &"death"
autoplay = "default"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_path_custom_color = Color(0.72549, 0, 0.0745098, 1)

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="shotTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="cooldownTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="shotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="cooldownTimer" to="." method="_on_cooldown_timer_timeout"]
